# CC-2021

./: README.md  pyproject.toml
.github/workflows/: ci.yml
kontrolna_tacka_1/: README.md  docker-compose-db.yml  pyproject.toml
kontrolna_tacka_1/cloud_project/: db.sqlite3
kontrolna_tacka_1/cloud_project/cloud_project/: asgi.py  settings.py  urls.py  wsgi.py
kontrolna_tacka_1/cloud_project/student/: models.py  serializers.py  views.py
kontrolna_tacka_1/cloud_project/student/migrations/: 0001_initial.py
kontrolna_tacka_1_spring_boot/: Vagrantfile  Vagrantfile_old  docker-compose-db.yml  docker-compose-kt3.yml  docker-compose-kt4.yml  docker-compose.yml  vagrantEnv.sh  vagrantInit.sh  vagrantUpdateAndDocker.sh
kontrolna_tacka_1_spring_boot/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
kontrolna_tacka_1_spring_boot/nginx/: nginx.conf
kontrolna_tacka_1_spring_boot/webapp/: Dockerfile  pom.xml
kontrolna_tacka_1_spring_boot/webapp/src/main/resources/: application.yml
vezbe_11_23/: Vagrantfile  notes.txt  script.sh
vezbe_11_23/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
vezbe_11_30/: Dockerfile
vezbe_11_30/django_docker/: Dockerfile
vezbe_12_14/: Dockerfile  notes.txt
web_app/student/: models.py  serializers.py  views.py
web_app/student/migrations/: 0001_initial.py
web_app/web_app/: settings.py  urls.py
(+12 files in other folders)
